--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,18 @@
+#load-more-btn {
+    border-radius: 0;
+}
+
 #load-more-btn:hover {
     background-color: white;
     color: black;
     font-weight: bold;
     border: 2px solid black;
+}
+
+.input-group input {
+    border-radius: 0;
+}
+
+.input-group button {
+    border-radius: 0;
 }
